Fix HTML from HTML Exercise 1

--- a/Modulo-1/1-html/2-ejercicios/01-fix-this-html/01-fix-this-html.html
+++ b/Modulo-1/1-html/2-ejercicios/01-fix-this-html/01-fix-this-html.html
@@ -1,11 +1,16 @@
-<html>
-<title>My first HTML page
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first HTML page</title>
+  </head>
 
   <body>
-    <h1 id=heading>My first site
-      <img src="underconstruction.gif">
-      <p>I'm sorry, but this page is &nbsp;&nbsp;<b>still</b>&nbsp;&nbsp; under construction.</b>
-      <p>I love <ahref="https: //developer.mozilla.org/en-US/docs/Web/HTML">learning html</a>
-
-</html>
+    <h1 id="heading">My first site</h1>
+      <img src="underconstruction.gif" alt="image describing site underconstruction">
+      <p>I'm sorry, but this page is <b>still</b> under construction.</p>
+      <p>I love <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">learning html</a></p>
 </body>
+</html>
