Add Table as shown on the picture

--- a/Modulo-1/1-html/2-ejercicios/05-tables/05-tables.html
+++ b/Modulo-1/1-html/2-ejercicios/05-tables/05-tables.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>05: Tables</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>05: Tables</title>
-</head>
-
-<body>
-  <table>
-
-  </table>
-</body>
-
+  <body>
+    <table>
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Cost per item</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Bananas</th>
+          <td>50 Ar</td>
+          <td>5</td>
+          <td>250 Ar</td>
+        </tr>
+        <tr>
+          <th>Mangoes</th>
+          <td>60 Ar</td>
+          <td>3</td>
+          <td>180 Ar</td>
+        </tr>
+        <tr>
+          <th>Plums</th>
+          <td>10 Ar</td>
+          <td>10</td>
+          <td>100 Ar</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="3">Total</th>
+          <th>530 Ar</th>
+        </tr>
+      </tfoot>
+    </table>
+  </body>
 </html>
