--- a/Modulo-1/1-html/2-ejercicios/06-images/06-images.html
+++ b/Modulo-1/1-html/2-ejercicios/06-images/06-images.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>
-      06: Images
-    </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>06: Images</title>
     <style>
       img {
         max-width: 100%;
@@ -24,44 +22,33 @@
   </head>
   <body>
     <header>
-      <h1>
-        Images
-      </h1>
+      <h1>Images</h1>
     </header>
     <nav>
       <ul>
         <li>
-          <a href="#section_jpg">
-            As a JPEG
-          </a>
+          <a href="#section_jpg"> As a JPEG </a>
         </li>
         <li>
-          <a href="#section_png">
-            As a PNG
-          </a>
+          <a href="#section_png"> As a PNG </a>
         </li>
         <li>
-          <a href="#section_svg">
-            As an SVG
-          </a>
+          <a href="#section_svg"> As an SVG </a>
         </li>
         <li>
-          <a href="#section_webp">
-            As a WebP
-          </a>
+          <a href="#section_webp"> As a WebP </a>
         </li>
       </ul>
     </nav>
     <main>
-
       <section id="section_jpg">
         <header>
           <h2>As a JPEG</h2>
           <p>Joint Photographic Experts Group</p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/onja_crew.jpg" alt />
         <p>
-          JPEGs are…
+          JPEGs are… Bueno para fotos
           <!-- Insert description from the list here -->
         </p>
       </section>
@@ -71,9 +58,9 @@
           <h2>As a PNG</h2>
           <p>Portable Network Graphics</p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/logo_onja.png" alt />
         <p>
-          PNGs are…
+          PNGs are… Ideal para gráficos, tablas y otras imágenes generadas.
           <!-- Insert description from the list here -->
         </p>
       </section>
@@ -83,9 +70,9 @@
           <h2>As an SVG</h2>
           <p>Scalable Vector Graphics</p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/logo_onja_disk.svg" alt />
         <p>
-          SVGs are…
+          SVGs are… Mejor para imágenes vectoriales
           <!-- Insert description from the list here -->
         </p>
       </section>
@@ -95,13 +82,13 @@
           <h2>As a WebP</h2>
           <p>Web PNG</p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/onja_crew.webp" alt />
         <p>
-          WebPs are…
+          WebPs are… Lo mejor para todo, excepto para vectores, pero no es
+          ampliamente compatible.
           <!-- Insert description from the list here -->
         </p>
       </section>
-
     </main>
   </body>
 </html>
