do the first css, html and js exercises

--- a/Modulo-1/1-html/2-ejercicios/03-html-attributes/index.html
+++ b/Modulo-1/1-html/2-ejercicios/03-html-attributes/index.html
@@ -21,14 +21,14 @@
       <div class="message">
         <div class="message__author">Luke</div>
         <p class="message__content">
-          Let's meet at the iCafe in Merchant City. https://goo.gl/maps/aza4h9nUBhn
+          Let's meet at the <a href="https://goo.gl/maps/aza4h9nUBhn">iCafe </a> in Merchant City.
         </p>
         <span class="message__time">7:35pm</span>
       </div>
       <div class="message">
         <div class="message__author">Won</div>
         <p class="message__content">
-          Ok! https://media.giphy.com/media/l41K4KlVE8dgozf8I/giphy.gif
+          Ok! <img src="https://media.giphy.com/media/l41K4KlVE8dgozf8I/giphy.gif" alt="gif"> 
         </p>
         <span class="message__time">7:38pm</span>
       </div>
