--- a/Modulo-1/1-html/2-ejercicios/05-tables/05-tables.html
+++ b/Modulo-1/1-html/2-ejercicios/05-tables/05-tables.html
@@ -8,7 +8,40 @@
 
 <body>
   <table>
-
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Cost per Item</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Bananas</th>
+          <td>50 Ar</td>
+          <td>5</td>
+          <td>250 Ar</td>
+        </tr>
+        <tr>
+          <th>Mangoes</th>
+          <td>60 Ar</td>
+          <td>3</td>
+          <td>180 Ar</td>
+        </tr>
+        <tr>
+          <th>Plums</th>
+          <td>10 Ar</td>
+          <td>10</td>
+          <td>100 Ar</td>
+        </tr>
+        <tr>
+          <th></th>
+          <th>TOTAL</th>
+          <td></td>
+          <th>530 Ar</th>
+        </tr>
+      </tbody>
   </table>
 </body>
 
