--- a/Modulo-1/1-html/2-ejercicios/06-images/06-images.html
+++ b/Modulo-1/1-html/2-ejercicios/06-images/06-images.html
@@ -31,22 +31,22 @@
     <nav>
       <ul>
         <li>
-          <a href="#section_jpg">
+          <a href="./img/onja_crew.jpg">
             As a JPEG
           </a>
         </li>
         <li>
-          <a href="#section_png">
+          <a href="./img/logo_onja.png">
             As a PNG
           </a>
         </li>
         <li>
-          <a href="#section_svg">
+          <a href="./img/logo_onja_disk.svg">
             As an SVG
           </a>
         </li>
         <li>
-          <a href="#section_webp">
+          <a href="./img/cat_typing.webp">
             As a WebP
           </a>
         </li>
