--- a/2023-track-01-febrero/afternoon-track/M1-javascript-developer/01-proyecto-dayseeker/index.html
+++ b/2023-track-01-febrero/afternoon-track/M1-javascript-developer/01-proyecto-dayseeker/index.html
@@ -83,6 +83,82 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- HERO -->
+      <section class="rc-section-hero">
+        <img
+          src="https://res.cloudinary.com/dfnh5hecu/image/upload/v1674466529/Dayseeker/DS_BANNER_1944x_dokacd.jpg"
+          alt="Dark Sun Album Cover"
+          loading="lazy"
+          class="rc-section-hero--banner"
+        />
+      </section>
+      <!--  FEATURED ITEMS -->
+      <section class="rc-section-featured rc-layout-flex">
+        <h2>Featured Items</h2>
+        <div class="rc-section-featured__gallery rc-layout-grid">
+          <article class="rc-section-featured__article rc-layout-flex">
+            <img
+              src="https://res.cloudinary.com/dfnh5hecu/image/upload/v1674466530/Dayseeker/1222DayseekerTourReturnsWebMock6-Tee1_360x_x7nvwa.webp"
+              alt="Vaporwave Tee preview"
+              loading="lazy"
+              class="rc-section-featured--preview"
+            />
+            <h3>Vaporwave Tee</h3>
+            <p class="rc-section-featured--price">40.00$</p>
+          </article>
+          <article class="rc-section-featured__article rc-layout-flex">
+            <img
+              src="https://res.cloudinary.com/dfnh5hecu/image/upload/v1674466530/Dayseeker/1222DayseekerTourReturnsWebMock3-DyeTee1_360x_t2c77b.webp"
+              alt="Tour Tee preview"
+              loading="lazy"
+              class="rc-section-featured--preview"
+            />
+            <h3>Tour Tee</h3>
+            <p class="rc-section-featured--price">40.00$</p>
+          </article>
+          <article class="rc-section-featured__article rc-layout-flex">
+            <img
+              src="https://res.cloudinary.com/dfnh5hecu/image/upload/v1674466530/Dayseeker/1222DayseekerTourReturnsWebMock4-Tee1_360x_mbcqnn.webp"
+              alt="Dark Sun Tee preview"
+              loading="lazy"
+              class="rc-section-featured--preview"
+            />
+            <h3>Dark Sun Tee</h3>
+            <p class="rc-section-featured--price">40.00$</p>
+          </article>
+          <article class="rc-section-featured__article rc-layout-flex">
+            <img
+              src="https://res.cloudinary.com/dfnh5hecu/image/upload/v1674466529/Dayseeker/1222DayseekerTourReturnsWebMock2-Tank1_360x_xcosdl.webp"
+              alt="Sunset Tee preview"
+              loading="lazy"
+              class="rc-section-featured--preview"
+            />
+            <h3>Sunset Tee</h3>
+            <p class="rc-section-featured--price">40.00$</p>
+          </article>
+          <article class="rc-section-featured__article rc-layout-flex">
+            <img
+              src="https://res.cloudinary.com/dfnh5hecu/image/upload/v1674466529/Dayseeker/Dayseeker_VinylVariantMocks_Black_360x_t9q5ac.webp"
+              alt="Dark Sun Album preview"
+              loading="lazy"
+              class="rc-section-featured--preview"
+            />
+            <h3>Dark Sun Vynil</h3>
+            <p class="rc-section-featured--price">35.00$</p>
+          </article>
+        </div>
+      </section>
+      <!--  VIDEO -->
+      <section class="rc-section-video rc-layout-flex">
+        <div class="rc-section-video__description rc-layout-flex">
+          <h2>Crying while you're dancing</h2>
+          <button class="rc-button">Watch</button>
+        </div>
+        <video autoplay muted class="rc-section-video-media">
+          <source src="./assets/videos/crying.mp4" type="video/mp4" />
+        </video>
+      </section>
+    </main>
   </body>
 </html>
