feat: add new content project 1 js developer

--- a/2023-track-01-febrero/morning-track/M1-javascript-developer/morning-track/proyecto-landing/index.html
+++ b/2023-track-01-febrero/morning-track/M1-javascript-developer/morning-track/proyecto-landing/index.html
@@ -74,82 +74,105 @@
             </div>
           </div>
           <!-- IMAGE -->
-          <img src="#" loading="lazy" alt="#" class="">
+          <img
+            src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1676284071/Pink_Panther_and_Pals_Logo_d1ymgp.webp"
+            loading="lazy" alt="#" class="">
         </div>
       </div>
     </section>
     <section class="rc-section-customer">
       <div class="rc-layout-container">
-        <div class="">
-          <img src="#" alt="#" class="">
-          <img src="#" alt="#" class="">
-          <img src="#" alt="#" class="">
-          <img src="#" alt="#" class="">
-          <img src="#" alt="#" class="">
+        <div class="rc-layout-flex rc-section-customer__layout ">
+          <img src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1675849922/behance_rf82if.svg" alt="#"
+            class="rc-section-customer--logo">
+          <img src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1675849922/behance_rf82if.svg" alt="#"
+            class="rc-section-customer--logo">
+          <img src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1675849922/behance_rf82if.svg" alt="#"
+            class="rc-section-customer--logo">
+          <img src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1675849922/behance_rf82if.svg" alt="#"
+            class="rc-section-customer--logo">
+          <img src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1675849922/behance_rf82if.svg" alt="#"
+            class="rc-section-customer--logo">
         </div>
       </div>
     </section>
     <section class="rc-section-feature">
       <div class="rc-layout-container">
-        <div class="">
+        <div class="rc-section-feature__layout rc-layout-grid rc-layout-grid-mod">
           <!-- IMAGE -->
-          <img src="#" alt="#" class="">
+          <img
+            src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1676284071/Pink_Panther_and_Pals_Logo_d1ymgp.webp"
+            alt="#" class="rc-image-half-left">
           <!-- FEATURE -->
           <div>
             <h2>Features</h2>
-            <p class="">
+            <p class="rc-text-intro">
               Lorem ipsum dolor sit amet, consec adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua. Enim ad minim veniam, qrcs nostrud exercitation ullamco nisi
               eqrc.
             </p>
-            <ul class="">
-              <li class="">Lorem ipsum.</li>
-              <li class="">Lorem ipsum.</li>
-              <li class="">Lorem ipsum.</li>
-              <li class="">Lorem ipsum.</li>
+            <ul class="rc-component-list rc-component-list-feature rc-layout-grid">
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
             </ul>
           </div>
         </div>
-        <div class="">
+        <div class="rc-section-feature__layout rc-layout-grid rc-layout-grid-mod">
           <!-- FEATURE -->
           <div>
             <h2>Features</h2>
-            <p class="">
+            <p class="rc-text-intro">
               Lorem ipsum dolor sit amet, consec adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua. Enim ad minim veniam, quis nostrud exercitation ullamco nisi
               equi.
             </p>
-            <ul class="">
-              <li class="">Lorem ipsum.</li>
-              <li class="">Lorem ipsum.</li>
-              <li class="">Lorem ipsum.</li>
-              <li class="">Lorem ipsum.</li>
+            <ul class="rc-component-list rc-component-list-feature rc-layout-grid rc-layout-grid-mod">
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
+              <li class="rc-component-list--item rc-component-list--item-check">Lorem ipsum.</li>
             </ul>
           </div>
           <!-- IMAGE -->
-          <img src="#" alt="#" class="">
+          <img
+            src="https://res.cloudinary.com/dx8n0rrqc/image/upload/v1676284071/Pink_Panther_and_Pals_Logo_d1ymgp.webp"
+            alt="#" class="rc-image-half-right">
         </div>
       </div>
     </section>
   </main>
   <footer class="rc-section-footer">
     <div class="rc-layout-container">
-      <div class="">
+      <div class="rc-section-footer__layout rc-layout-flex">
         <!-- COPYRIGHT -->
-        <p class="">
+        <p class="rc-section-footer--copyright">
           <small>
             &copy; 2023 Rock{the code}
           </small>
         </p>
         <!-- MENU -->
-        <a href="#" aria-label="#">
-          <svg></svg>
+        <a href="#" role="link" aria-label="#">
+          <svg viewBox="0 0 24 24" height="16" width="16" fill="none" stroke="#AEAEAE" stroke-linecap="round"
+            stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
+            <path
+              d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+          </svg>
         </a>
-        <a href="#" aria-label="#">
-          <svg></svg>
+        <a href="#" role="link" aria-label="#">
+          <svg viewBox="0 0 24 24" height="16" width="16" fill="none" stroke="#AEAEAE" stroke-linecap="round"
+            stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
+            <path
+              d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+          </svg>
         </a>
-        <a href="#" aria-label="#">
-          <svg></svg>
+        <a href="#" role="link" aria-label="#">
+          <svg viewBox="0 0 24 24" height="16" width="16" fill="none" stroke="#AEAEAE" stroke-linecap="round"
+            stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
+            <path
+              d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+          </svg>
         </a>
       </div>
     </div>
